--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "templates/SlickGrid"]
 	path = templates/SlickGrid
 	url = git://github.com/mleibman/SlickGrid.git
+[submodule "django_compiler"]
+	path = django_compiler
+	url = git@github.com:zeebo/django_compiler.git
